tests/compile_fail/state/not_on_state_impl.stderr
error: `moku::superstate` must only be applied to implementations of the `moku::State` trait
 --> tests/compile_fail/state/not_on_state_impl.rs:9:5
  |
9 |     impl Default for Bottom {
  |     ^^^^
